--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,19 @@
-<div>
+<!-- <div>
   <div class="header-component-container">
     <app-header></app-header>
   </div>
     <div>
       <app-calender-body></app-calender-body>
     </div>
+</div> -->
+<div>
+  <!-- <div class="header-component-container">
+    <app-header></app-header>
+  </div> -->
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+    <!-- <div>
+      <app-calender-body></app-calender-body>
+    </div> -->
 </div>
