--- a/src/app/calender-body/calender-body.component.html
+++ b/src/app/calender-body/calender-body.component.html
@@ -1,3 +1,8 @@
+
+
+<div class="header-component-container">
+    <app-header></app-header>
+</div>
 <div class="body-container">
     <div class="inner-space">
         <div class="change-month-container">
@@ -6,6 +11,9 @@
         <div class="month-body-container" cdkDropListGroup>
             <app-month-body [allEvents]="events"></app-month-body>
         </div>
+        <!-- <div *ngIf="!isDataThere">
+            Loading...
+        </div> -->
     </div>
     
 </div>
